# SyntheticSocieties

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .zenodo.json  ABOUT.md  BGF_IMPLEMENTATION_ROADMAP.md  BGF_PROGRESS_CHECKLIST.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.repro  GAP_ANALYSIS.md  LICENSE  Makefile  PARALLEL_PLAN.md  README.md  REPRODUCTION_GUIDE.md  SECURITY.md  docker-compose.yml  mkdocs.yml  monitor.sh  pending.txt  pipeline_bad_apple.sh  pipeline_cross_cultural.sh  pipeline_macro_shock.sh  pipeline_phase_c.sh  pipeline_phase_d.sh  pipeline_topology.sh  pyproject.toml  pytest.ini  render.yaml  reproduce_paper.sh  requirements-api.txt  requirements-ci.txt  requirements.lock.txt  requirements.txt  (+7 more)
.devcontainer/: devcontainer.json  post-create.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
agents/: __init__.py  agent.py  collective_memory.py  memory.py  persistent_memory.py  profile.py  profile_samples.py  state.py
analysis/: bad_apple_sweep.json  bad_apple_sweep_n500.json  bayesian_grounding_posterior.py  brm_sensitivity.py  condition_d_results.json  condition_d_results_n100.json  condition_d_results_n500_10seed.json  cross_cultural_expanded_results.json  cross_cultural_results.json  cross_model_results.json  cross_model_results_dryrun.json  forest_plot.py  h9_behavioral_benchmark.py  mechanism_analysis.py  mediation_summary.py  meta_analysis.py  multirun_stats.json  paper_numbers.json  placebo_variance.py  policy_sweep_results.json  react_report_agent.py  ten_seed_aggregate.sql  ten_seed_report.py  three_condition_stats.json  three_condition_table.tex  trust_gradient_continuous.py  variance_decomposition.py
api/: __init__.py  app.py
benchmark/: LEADERBOARD.md  SPECIFICATION.md  build_bgf_reference.py  build_leaderboard.py  score.py
bgf_logging/: __init__.py  event_logger.py  memory_diagnostics.py  prompt_logger.py  witness.py
configs/: __init__.py  ablation_placebo.yaml  ablation_suite.yaml  base_config.yaml  comparison_suite.yaml  condition_c.yaml  condition_f.yaml  condition_p.yaml  condition_s.yaml  demo_cloud.yaml  experiment_suite.yaml  grounding_comparison.yaml  llm_config_generator.py  ood_country_holdout.yaml  persona_fidelity.yaml  perturbation_suite.yaml  population_sweep.yaml  robustness_suite.yaml  schema.py  seed_manager.py  society_generation.yaml
data/: README.md  cross_cultural_benchmarks.json  ess_schema.py
decision/: __init__.py  ablated_llm_policy.py  auditable_random_policy.py  backend_protocol.py  conditioned_llm_policy.py  constants.py  continuous_policy.py  data_driven_policy.py  dataset_router.py  experimental_prompt_builder.py  fabricated_rag_policy.py  fast_batched_backend.py  fidelity_prompt_builder.py  generative_agents_policy.py  graph_rag.py  llm_backend.py  llm_policy.py  llm_policy_base.py  mock_policy.py  model_config.py  openai_backend.py  output_parser.py  padded_ablation_policy.py  padded_prompt_builder.py  policy_protocol.py  prompt_builder.py  prompt_perturbation.py  random_policy.py  rule_based_ess_policy.py  rule_based_policy.py  schemas.py  scrambled_rag_policy.py  social_policy.py  sql_rag.py  system_prompts.py  template_policy.py  token_budget.py
docs/: AUDIT_DATA_METRICS_LOGGING.md  BGF_IMPLEMENTATION_ROADMAP.md  BGF_PROGRESS_CHECKLIST.md  BGF_TECH_STACK.md  GLOSSARY.md  MISSING.md  RACE_CONDITION_AUDIT.md  REMAINING_FIXES.md  REMAINING_FOR_PAPER.md  appendix_audit_trail.md  architecture.excalidraw  architecture.md  architecture_rationale.md  audit_response.md  causal_model.md  construct_validity.md  datasheet_ess_synthetic.md  enterprise_brief.md  evaluation_protocol.md  evidence_audit.md  figure_status.md  formal_framework.md  human_subjects_protocol.md  hypotheses.md  hypothesis_preregistration.md  index.md  methodology_revised.md  model_card_bgf.md  monograph.md  paper.md  paper_aamas.tex  paper_audit_2026_05_27.md  plot_methodology.md  reproducibility.md  reviewer_rebuttals.md  rlhf_multiagent_theory.md  theorems.md  theoretical_foundations.md
environment/: __init__.py  economy.py  institutions.py  network.py  payoffs.py  policy_intervention.py  social_dilemmas.py  social_env.py  world.py  world_state.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
human_experiment/: README.md
metrics/: __init__.py  behavioral_ground_truth.py  behavioral_realism.py  brlhf_standalone.py  calibration.py  complexity.py  cross_cultural.py  cross_model.py  descriptive.py  diagnostics.py  distribution.py  event_metrics.py  feature_importance.py  inequality.py  llm_diagnostics.py  macro_metrics.py  mediation.py  network_metrics.py  persona_decay.py  persona_fidelity.py  policy_intervention.py  policy_sensitivity.py  recalibration.py  social_metrics.py  statistical_inference.py  summary.py  synthetic_utility.py  trajectories.py  trajectory_bank.py  trust_gradient.py
models/: behavioral_model.py
notebooks/: bgf_demo.ipynb
population/: __init__.py  _helpers.py  column_aliases.py  country_clusters.py  ess_grounding.py  generator.py  ood_split.py  persona_synthesizer.py  placebo_demographics.py  profile_loader.py  profile_tree.py  sampling.py  schemas.py  seed_extractor.py  society_spec.py  spec_parser.py
scripts/: _common.py  _queue_pending_experiments.sh  _resume_n500_serial_gpu0.sh  _sequential_relaunch_n500.sh  analyze_cross_model_scaled.py  analyze_human_baseline.py  analyze_human_eval_ratings.py  analyze_memory_ablation.py  analyze_padded_vs_grounded.py  bootstrap_ci_report.py  build_condition_d_table.py  build_society_from_prompt.py  check_tmux_sims.sh  common_args.py  compare_policies.py  compute_paper_numbers.py  compute_three_condition_stats.py  create_id_notebook.py  decide_n500_pivot.py  deploy_hf_space.py  download_ess_data.py  download_model.py  download_models.py  ess_r11_loader.py  estimate_behavior_model.py  export_figures_hires.py  export_gephi.py  export_policy_comparison.py  export_policy_network_comparison.py  export_population_comparison.py  extract_modularity_from_cells.py  (+106 more)
(+487 files in other folders)
